tests/compile-fail/Rule_12_4.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let u8a: u8 = 0;
    let _ = u8a - 10;
}
